--- a/morality_predict/models/xgboost_mortality_analysis.ipynb
+++ b/morality_predict/models/xgboost_mortality_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,40 +418,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def objective(trial):\n",
     "    \"\"\"\n",
-    "    Optuna目标函数：针对不平衡数据优化,使用交叉验证和早停防止过拟合\n",
+    "    Optuna objective function for XGBoost hyperparameter optimization.\n",
     "    \"\"\"\n",
-    "    # 参数搜索空间\n",
     "    params = {\n",
     "        'objective': 'binary:logistic',\n",
-    "        'eval_metric': 'aucpr',  # 改用AUCPR,更适合不平衡数据\n",
+    "        'eval_metric': 'aucpr',  # better for imbalanced data\n",
     "        'tree_method': 'hist',\n",
-    "        'scale_pos_weight': scale_pos_weight,  # 已经设置为5.06处理不平衡\n",
+    "        'scale_pos_weight': scale_pos_weight,  # handle imbalanced data\n",
     "        'random_state': 42,\n",
     "        \n",
-    "        # 调整的超参数\n",
+    "        # Hyperparameter search space\n",
     "        'max_depth': trial.suggest_int('max_depth', 3, 8),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 0.01, 0.3, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 100, 1000, step=100),\n",
-    "        'min_child_weight': trial.suggest_int('min_child_weight', 1, 10),  # 扩大范围,控制叶子节点\n",
+    "        'min_child_weight': trial.suggest_int('min_child_weight', 1, 10), \n",
     "        'subsample': trial.suggest_float('subsample', 0.6, 1.0),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.6, 1.0),\n",
-    "        'gamma': trial.suggest_float('gamma', 0, 1.0),  # 扩大范围,控制过拟合\n",
-    "        'reg_alpha': trial.suggest_float('reg_alpha', 0, 2.0),  # L1正则化,扩大范围\n",
-    "        'reg_lambda': trial.suggest_float('reg_lambda', 0, 2.0),  # L2正则化,扩大范围\n",
-    "        'max_delta_step': trial.suggest_int('max_delta_step', 0, 5),  # 对不平衡数据有帮助\n",
+    "        'gamma': trial.suggest_float('gamma', 0, 1.0),  # reduce overfitting\n",
+    "        'reg_alpha': trial.suggest_float('reg_alpha', 0, 2.0),  # L1 regularization\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 0, 2.0),  # L2 regularization\n",
+    "        'max_delta_step': trial.suggest_int('max_delta_step', 0, 5),  # helpful for imbalanced data\n",
     "    }\n",
     "    \n",
-    "    # 使用StratifiedKFold进行交叉验证\n",
+    "    # use StratifiedKFold for cross-validation\n",
     "    cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "    cv_scores_auc = []\n",
-    "    cv_scores_aucpr = []  # 同时监控AUCPR\n",
-    "    train_scores = []  # 监控过拟合\n",
+    "    cv_scores_aucpr = []  # AUCPR is more relevant for imbalanced data\n",
+    "    train_scores = []  # monitor training performance for overfitting analysis\n",
     "    \n",
     "    for fold_idx, (train_idx, val_idx) in enumerate(cv.split(X_train_imputed, y_train)):\n",
     "        X_fold_train = X_train_imputed[train_idx]\n",
@@ -459,50 +458,46 @@
     "        X_fold_val = X_train_imputed[val_idx]\n",
     "        y_fold_val = y_train.iloc[val_idx]\n",
     "        \n",
-    "        # 创建模型\n",
     "        model = xgb.XGBClassifier(**params)\n",
     "        \n",
-    "        # 使用简化的fit调用（兼容旧版本XGBoost）\n",
     "        model.fit(\n",
     "            X_fold_train, y_fold_train,\n",
     "            eval_set=[(X_fold_train, y_fold_train), (X_fold_val, y_fold_val)],\n",
     "            verbose=False\n",
     "        )\n",
     "        \n",
-    "        # 计算训练集和验证集的AUC和AUCPR\n",
+    "        # calculate metrics on training and validation sets\n",
     "        y_train_proba = model.predict_proba(X_fold_train)[:, 1]\n",
     "        y_val_proba = model.predict_proba(X_fold_val)[:, 1]\n",
     "        \n",
     "        train_auc = roc_auc_score(y_fold_train, y_train_proba)\n",
     "        val_auc = roc_auc_score(y_fold_val, y_val_proba)\n",
-    "        val_aucpr = average_precision_score(y_fold_val, y_val_proba)  # AUCPR更适合不平衡\n",
+    "        val_aucpr = average_precision_score(y_fold_val, y_val_proba)  # AUPR is main metric, better for imbalanced data\n",
     "        \n",
     "        train_scores.append(train_auc)\n",
     "        cv_scores_auc.append(val_auc)\n",
     "        cv_scores_aucpr.append(val_aucpr)\n",
     "        \n",
-    "        # Optuna剪枝：如果当前fold的表现很差，提前终止\n",
+    "        # Optuna pruning: if the intermediate AUPR is not promising, prune the trial\n",
     "        trial.report(val_aucpr, fold_idx)\n",
     "        if trial.should_prune():\n",
     "            raise optuna.TrialPruned()\n",
     "    \n",
-    "    # 计算平均分数\n",
     "    mean_cv_auc = np.mean(cv_scores_auc)\n",
-    "    mean_cv_aucpr = np.mean(cv_scores_aucpr)  # 主要优化目标\n",
+    "    mean_cv_aucpr = np.mean(cv_scores_aucpr)  # main evaluation metric\n",
     "    mean_train_score = np.mean(train_scores)\n",
     "    \n",
-    "    # 过拟合惩罚：如果训练集和验证集差距过大，降低得分\n",
+    "    # overfitting penalty\n",
     "    overfitting_penalty = abs(mean_train_score - mean_cv_auc)\n",
-    "    if overfitting_penalty > 0.05:  # 如果差距超过5%\n",
-    "        mean_cv_aucpr -= overfitting_penalty * 0.5  # 施加惩罚到主评估指标\n",
+    "    if overfitting_penalty > 0.05:  \n",
+    "        mean_cv_aucpr -= overfitting_penalty * 0.5  \n",
     "    \n",
-    "    # 记录额外信息\n",
     "    trial.set_user_attr('mean_train_auc', mean_train_score)\n",
     "    trial.set_user_attr('mean_val_auc', mean_cv_auc)\n",
     "    trial.set_user_attr('mean_val_aucpr', mean_cv_aucpr)\n",
     "    trial.set_user_attr('overfitting_gap', overfitting_penalty)\n",
     "    \n",
-    "    return mean_cv_aucpr  # 优化AUCPR而非AUC"
+    "    return mean_cv_aucpr  "
    ]
   },
   {
