--- a/morality_predict/models/xgboost_mortality_analysis.ipynb
+++ b/morality_predict/models/xgboost_mortality_analysis.ipynb
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -952,20 +952,18 @@
     "fig_optuna = plt.figure(figsize=(16, 10))\n",
     "gs_optuna = fig_optuna.add_gridspec(3, 2, hspace=0.3, wspace=0.3)\n",
     "\n",
-    "# 1. 优化历史\n",
+    "# 1. optimization history\n",
     "ax1 = fig_optuna.add_subplot(gs_optuna[0, 0])\n",
-    "# 提取优化历史数据\n",
     "trial_numbers = [trial.number for trial in study.trials]\n",
     "objective_values = [trial.value for trial in study.trials]\n",
     "\n",
-    "# 绘制优化历史\n",
     "ax1.plot(trial_numbers, objective_values, marker='o', linestyle='-', color='#3498db')\n",
     "ax1.set_title('Optimization History', fontsize=12, fontweight='bold')\n",
     "ax1.set_xlabel('Trial Number')\n",
     "ax1.set_ylabel('Objective Value')\n",
     "ax1.grid(True, alpha=0.3)\n",
     "\n",
-    "# 2. 参数重要性\n",
+    "# 2. hyperparameter importance\n",
     "ax2 = fig_optuna.add_subplot(gs_optuna[0, 1])\n",
     "try:\n",
     "    optuna.visualization.matplotlib.plot_param_importances(study, ax=ax2)\n",
@@ -974,7 +972,7 @@
     "    ax2.text(0.5, 0.5, 'Not enough trials for importance analysis', \n",
     "             ha='center', va='center', transform=ax2.transAxes)\n",
     "\n",
-    "# 3. 过拟合趋势（改用AUCPR）\n",
+    "# 3. overfitting analysis\n",
     "ax3 = fig_optuna.add_subplot(gs_optuna[1, :])\n",
     "train_aucs = [trial.user_attrs.get('mean_train_auc', 0) for trial in study.trials]\n",
     "val_aucprs = [trial.user_attrs.get('mean_val_aucpr', 0) for trial in study.trials]\n",
@@ -990,7 +988,7 @@
     "ax3.legend()\n",
     "ax3.grid(True, alpha=0.3)\n",
     "\n",
-    "# 4. 参数关系（learning_rate vs max_depth，颜色改为AUCPR）\n",
+    "# 4. Learning Rate vs Max Depth scatter plot\n",
     "ax4 = fig_optuna.add_subplot(gs_optuna[2, 0])\n",
     "lr_values = [trial.params.get('learning_rate', 0) for trial in study.trials]\n",
     "depth_values = [trial.params.get('max_depth', 0) for trial in study.trials]\n",
@@ -1004,7 +1002,7 @@
     "plt.colorbar(scatter, ax=ax4, label='Validation AUCPR')\n",
     "ax4.grid(True, alpha=0.3)\n",
     "\n",
-    "# 5. 过拟合差距分布\n",
+    "# 5. overfitting gap distribution\n",
     "ax5 = fig_optuna.add_subplot(gs_optuna[2, 1])\n",
     "overfitting_gaps = [trial.user_attrs.get('overfitting_gap', 0) for trial in study.trials]\n",
     "ax5.hist(overfitting_gaps, bins=30, color='#e74c3c', alpha=0.7, edgecolor='black')\n",
