--- a/mortality_predict/models/logistic_mortality_analysis.ipynb
+++ b/mortality_predict/models/logistic_mortality_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,12 +74,13 @@
    "metadata": {},
    "source": [
     "- Divide the dataset into the training set and the test set, with an 80/20 ratio.\n",
-    "- To ensure that the proportion of deceased/survived patients in the training set and the test set is consistent with the original data, `stratified sampling` is adopted."
+    "- To ensure that the proportion of deceased/survived patients in the training set and the test set is consistent with the original data, `stratified sampling` is adopted.\n",
+    "- Set the random seed to 42 to ensure the comparability of different models' results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
     "    estimator=l1_model,\n",
     "    param_grid=param_grid,\n",
     "    cv=5,                    # 5-fold cross-validation\n",
-    "    scoring= 'average_precision',   # Use AUCPRC as the evaluation metric\n",
+    "    scoring= 'average_precision',   # Use AUCPRC as the evaluation metric, for imbalanced data\n",
     "    n_jobs=-1,               \n",
     "    verbose=1\n",
     ")\n",
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,26 +537,26 @@
       "  feature selection rate: 26.2%\n",
       "\n",
       "Top 20 most important characteristics (sorted by the absolute value of the coefficients):\n",
-      "age                           :   0.3595 (↑ increasemortality risk)\n",
-      "elixhauser                    :   0.2487 (↑ increasemortality risk)\n",
-      "extubated_mean                :  -0.2116 (↓ decreasemortality risk)\n",
-      "output_step_mean              :  -0.2069 (↓ decreasemortality risk)\n",
-      "GCS_max                       :  -0.2004 (↓ decreasemortality risk)\n",
-      "GCS_last                      :  -0.1880 (↓ decreasemortality risk)\n",
-      "SpO2_last                     :  -0.1769 (↓ decreasemortality risk)\n",
-      "Weight_kg                     :  -0.1744 (↓ decreasemortality risk)\n",
-      "SOFA_last                     :   0.1698 (↑ increasemortality risk)\n",
-      "Shock_Index_last              :   0.1615 (↑ increasemortality risk)\n",
-      "median_dose_vaso_last         :   0.1520 (↑ increasemortality risk)\n",
-      "FiO2_1_last                   :   0.1395 (↑ increasemortality risk)\n",
-      "SIRS_last                     :   0.1303 (↑ increasemortality risk)\n",
-      "mechvent_mean                 :   0.1191 (↑ increasemortality risk)\n",
-      "Total_bili_min                :   0.1092 (↑ increasemortality risk)\n",
-      "Magnesium_min                 :   0.1086 (↑ increasemortality risk)\n",
-      "Hb_mean                       :  -0.1079 (↓ decreasemortality risk)\n",
-      "Arterial_lactate_min          :   0.1022 (↑ increasemortality risk)\n",
-      "SIRS_min                      :   0.1008 (↑ increasemortality risk)\n",
-      "PTT_min                       :   0.0934 (↑ increasemortality risk)\n"
+      "age                           :   0.3595 (↑ increase mortality risk)\n",
+      "elixhauser                    :   0.2487 (↑ increase mortality risk)\n",
+      "extubated_mean                :  -0.2116 (↓ decrease mortality risk)\n",
+      "output_step_mean              :  -0.2069 (↓ decrease mortality risk)\n",
+      "GCS_max                       :  -0.2004 (↓ decrease mortality risk)\n",
+      "GCS_last                      :  -0.1880 (↓ decrease mortality risk)\n",
+      "SpO2_last                     :  -0.1769 (↓ decrease mortality risk)\n",
+      "Weight_kg                     :  -0.1744 (↓ decrease mortality risk)\n",
+      "SOFA_last                     :   0.1698 (↑ increase mortality risk)\n",
+      "Shock_Index_last              :   0.1615 (↑ increase mortality risk)\n",
+      "median_dose_vaso_last         :   0.1520 (↑ increase mortality risk)\n",
+      "FiO2_1_last                   :   0.1395 (↑ increase mortality risk)\n",
+      "SIRS_last                     :   0.1303 (↑ increase mortality risk)\n",
+      "mechvent_mean                 :   0.1191 (↑ increase mortality risk)\n",
+      "Total_bili_min                :   0.1092 (↑ increase mortality risk)\n",
+      "Magnesium_min                 :   0.1086 (↑ increase mortality risk)\n",
+      "Hb_mean                       :  -0.1079 (↓ decrease mortality risk)\n",
+      "Arterial_lactate_min          :   0.1022 (↑ increase mortality risk)\n",
+      "SIRS_min                      :   0.1008 (↑ increase mortality risk)\n",
+      "PTT_min                       :   0.0934 (↑ increase mortality risk)\n"
      ]
     }
    ],
@@ -588,6 +589,16 @@
     "for i, row in selected_features_sorted.head(20).iterrows():\n",
     "    direction = \"↑ increase\" if row['coefficient'] > 0 else \"↓ decrease\"\n",
     "    print(f\"{row['feature']:30s}: {row['coefficient']:8.4f} ({direction} mortality risk)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('logistic_regression_selected_features.csv', 'w') as f:\n",
+    "    selected_features_sorted.to_csv(f, index=False)"
    ]
   },
   {
