trained model-MICE imputation; different time window

--- a/mortality_predict/models/random_forest_using_logistic_selected_features.ipynb
+++ b/mortality_predict/models/random_forest_using_logistic_selected_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.experimental import enable_iterative_imputer  \n",
+    "from sklearn.impute import IterativeImputer\n",
     "from sklearn.metrics import (\n",
     "    classification_report,\n",
     "    confusion_matrix,\n",
@@ -425,9 +426,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For numerical features, using the median is often more robust than the mean, as it is not affected by outliers. For categorical features, the mode can be used. \n",
-    "    \n",
-    "- The imputation values are calculated only on the training set and then applied to both the training and testing sets to prevent data leakage."
+    "- For missing values, the **MICE (Multiple Imputation by Chained Equations)** method is used. This approach iteratively predicts missing values for each feature using other features in the dataset, making it more robust and accurate compared to simple imputation methods like mean or median.\n",
+    "\n",
+    "- The imputation model is fitted only on the training set and then applied to both the training and testing sets to prevent data leakage.\n",
+    "\n",
+    "- MICE is particularly effective when there are complex relationships between features or when multiple features have missing values."
    ]
   },
   {
@@ -463,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imputer = SimpleImputer(strategy='median')\n",
+    "imputer = IterativeImputer(max_iter=10, random_state=42)\n",
     "\n",
     "X_train_imputed = imputer.fit_transform(X_train)\n",
     "X_test_imputed = imputer.transform(X_test)"
