--- a/mortality_predict/preprocessing/icu_feature_engineering_24h.ipynb
+++ b/mortality_predict/preprocessing/icu_feature_engineering_24h.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -591,25 +591,38 @@
      "output_type": "stream",
      "text": [
       "original data row count: 311780\n",
-      "data row count within first 24h of each ICU stay: 182601\n",
-      "icustayid count: 29060\n",
-      "average rows per icustayid: 6.3\n"
+      "data row count within first n hours of each ICU stay: 52842\n",
+      "icustayid count: 2804\n",
+      "average rows per icustayid: 18.8\n"
      ]
     }
    ],
    "source": [
+    "TIME_WINDOW_IN_HOUR = 72 # hours\n",
     "df_sorted = df.sort_values(['icustayid', 'timestep']).copy()\n",
     "\n",
-    "# Filter the data from the previous 24 hours of each ICU stay\n",
+    "# Filter the data from the previous n hours of each ICU stay\n",
     "first_timestamps = df_sorted.groupby('icustayid')['timestep'].transform('first')\n",
+    "last_timestamps = df_sorted.groupby('icustayid')['timestep'].transform('last')\n",
+    "\n",
+    "\n",
     "df_sorted['time_from_admission'] = df_sorted['timestep'] - first_timestamps\n",
-    "HOURS_24_IN_SECONDS = 24 * 60 * 60 # # timestep(s)  24h = 24*60*60 = 86400s\n",
-    "df_24h = df_sorted[df_sorted['time_from_admission'] <= HOURS_24_IN_SECONDS].copy().drop(columns=['time_from_admission'])\n",
+    "df_sorted['time_to_discharge'] = last_timestamps - first_timestamps\n",
+    "TIME_WINDOW_IN_SECONDS = TIME_WINDOW_IN_HOUR * 60 * 60 # # timestep(s)  1h = 1*60*60 = 3600s\n",
+    "df_within_window = df_sorted[(df_sorted['time_from_admission'] <= TIME_WINDOW_IN_SECONDS) & (df_sorted['time_to_discharge'] >= TIME_WINDOW_IN_SECONDS)].copy().drop(columns=['time_from_admission'])\n",
     "\n",
     "print(f\"original data row count: {len(df)}\")\n",
-    "print(f\"data row count within first 24h of each ICU stay: {len(df_24h)}\")\n",
-    "print(f\"icustayid count: {df_24h['icustayid'].nunique()}\")\n",
-    "print(f\"average rows per icustayid: {len(df_24h) / df_24h['icustayid'].nunique():.1f}\")"
+    "print(f\"data row count within first n hours of each ICU stay: {len(df_within_window)}\")\n",
+    "print(f\"icustayid count: {df_within_window['icustayid'].nunique()}\")\n",
+    "print(f\"average rows per icustayid: {len(df_within_window) / df_within_window['icustayid'].nunique():.1f}\")\n",
+    "\n",
+    "with open('data_within_window_log.txt', 'a') as f:\n",
+    "    f.write(f\"TIME_WINDOW_IN_HOUR: {TIME_WINDOW_IN_HOUR}\\n\")\n",
+    "    f.write(f\"original data row count: {len(df)}\\n\")\n",
+    "    f.write(f\"data row count within first {TIME_WINDOW_IN_HOUR} hours of each ICU stay: {len(df_within_window)}\\n\")\n",
+    "    f.write(f\"icustayid count: {df_within_window['icustayid'].nunique()}\\n\")\n",
+    "    f.write(f\"average rows per icustayid: {len(df_within_window) / df_within_window['icustayid'].nunique():.1f}\\n\")\n",
+    "    f.write('\\n')"
    ]
   },
   {
@@ -632,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -640,27 +653,27 @@
      "output_type": "stream",
      "text": [
       "SVR              1.000000\n",
-      "Total_protein    0.999409\n",
-      "ACT              0.992256\n",
-      "CI               0.991517\n",
-      "CRP              0.974398\n",
-      "SvO2             0.954086\n",
-      "PAPmean          0.952678\n",
-      "PAPsys           0.952163\n",
-      "PAPdia           0.952147\n",
-      "ETCO2            0.058269\n",
+      "Total_protein    0.993168\n",
+      "CI               0.990860\n",
+      "ACT              0.989194\n",
+      "CRP              0.983763\n",
+      "SvO2             0.936887\n",
+      "PAPmean          0.930396\n",
+      "PAPsys           0.928826\n",
+      "PAPdia           0.928655\n",
+      "ETCO2            0.052023\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "missing_rates = (df_24h.isnull().sum() / len(df_24h)).sort_values(ascending=False)\n",
+    "missing_rates = (df_within_window.isnull().sum() / len(df_within_window)).sort_values(ascending=False)\n",
     "print(missing_rates[missing_rates>0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -670,15 +683,15 @@
       "Columns to be dropped (14): \n",
       "  - identifier: columns: ['bloc', 'timestep']\n",
       "  - leak columns: ['delay_end_of_record_and_discharge_or_death', 'died_within_48h_of_out_time', 'morta_90']\n",
-      "  - high missing rate columns: ['SVR', 'Total_protein', 'ACT', 'CI', 'CRP', 'SvO2', 'PAPmean', 'PAPsys', 'PAPdia']\n",
-      "shape of the cleaned data:: (182601, 73)\n"
+      "  - high missing rate columns: ['SVR', 'Total_protein', 'CI', 'ACT', 'CRP', 'SvO2', 'PAPmean', 'PAPsys', 'PAPdia']\n",
+      "shape of the cleaned data:: (52842, 74)\n"
      ]
     }
    ],
    "source": [
     "identifier_cols = ['bloc', 'timestep']\n",
     "leak_cols = ['delay_end_of_record_and_discharge_or_death', 'died_within_48h_of_out_time', 'morta_90']\n",
-    "high_missing_cols = missing_rates[missing_rates > 0.95].index.tolist()\n",
+    "high_missing_cols = missing_rates[missing_rates > 0.90].index.tolist()\n",
     "cols_to_drop = identifier_cols + leak_cols + high_missing_cols\n",
     "\n",
     "\n",
@@ -687,7 +700,7 @@
     "print(f\"  - leak columns: {leak_cols}\")\n",
     "print(f\"  - high missing rate columns: {high_missing_cols}\")\n",
     "\n",
-    "df_cleaned = df_24h.drop(columns=cols_to_drop)\n",
+    "df_cleaned = df_within_window.drop(columns=cols_to_drop)\n",
     "print(f\"shape of the cleaned data:: {df_cleaned.shape}\")"
    ]
   },
@@ -727,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +749,7 @@
      "text": [
       "static variables (6): gender, age, elixhauser, re_admission, Height_cm, Weight_kg\n",
       "binary variables (2): mechvent, extubated\n",
-      "dynamic variables (63): GCS, RASS, HR, SysBP, MeanBP, DiaBP, RR, SpO2, Temp_C, Temp_F, CVP, Interface, FiO2_100, FiO2_1, O2flow, PEEP, TidalVolume, MinuteVentil, PAWmean, PAWpeak, PAWplateau, Potassium, Sodium, Chloride, Glucose, BUN, Creatinine, Magnesium, Calcium, Ionised_Ca, CO2_mEqL, SGOT, SGPT, Total_bili, Direct_bili, Albumin, Troponin, Hb, Ht, RBC_count, WBC_count, Platelets_count, PTT, PT, INR, Arterial_pH, paO2, paCO2, Arterial_BE, Arterial_lactate, HCO3, ETCO2, median_dose_vaso, max_dose_vaso, input_step, input_total, output_step, output_total, cumulated_balance, Shock_Index, PaO2_FiO2, SOFA, SIRS...\n"
+      "dynamic variables (64): GCS, RASS, HR, SysBP, MeanBP, DiaBP, RR, SpO2, Temp_C, Temp_F, CVP, Interface, FiO2_100, FiO2_1, O2flow, PEEP, TidalVolume, MinuteVentil, PAWmean, PAWpeak, PAWplateau, Potassium, Sodium, Chloride, Glucose, BUN, Creatinine, Magnesium, Calcium, Ionised_Ca, CO2_mEqL, SGOT, SGPT, Total_bili, Direct_bili, Albumin, Troponin, Hb, Ht, RBC_count, WBC_count, Platelets_count, PTT, PT, INR, Arterial_pH, paO2, paCO2, Arterial_BE, Arterial_lactate, HCO3, ETCO2, median_dose_vaso, max_dose_vaso, input_step, input_total, output_step, output_total, cumulated_balance, Shock_Index, PaO2_FiO2, SOFA, SIRS, time_to_discharge...\n"
      ]
     }
    ],
@@ -799,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,14 +844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data shape after aggregation: (29060, 326)\n"
+      "data shape after aggregation: (2804, 331)\n"
      ]
     }
    ],
@@ -859,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -894,15 +907,15 @@
        "      <th>extubated_mean</th>\n",
        "      <th>extubated_max</th>\n",
        "      <th>...</th>\n",
-       "      <th>SOFA_min</th>\n",
-       "      <th>SOFA_max</th>\n",
-       "      <th>SOFA_std</th>\n",
-       "      <th>SOFA_last</th>\n",
-       "      <th>SIRS_mean</th>\n",
        "      <th>SIRS_min</th>\n",
        "      <th>SIRS_max</th>\n",
        "      <th>SIRS_std</th>\n",
        "      <th>SIRS_last</th>\n",
+       "      <th>time_to_discharge_mean</th>\n",
+       "      <th>time_to_discharge_min</th>\n",
+       "      <th>time_to_discharge_max</th>\n",
+       "      <th>time_to_discharge_std</th>\n",
+       "      <th>time_to_discharge_last</th>\n",
        "      <th>died_in_hosp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -910,149 +923,156 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>61</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>175.00</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.631579</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>173.00</td>\n",
-       "      <td>115.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.052632</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.696692</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>273600.0</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273600</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>92</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>163.00</td>\n",
-       "      <td>68.5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172.72</td>\n",
+       "      <td>56.8</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.225395</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.285714</td>\n",
-       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.951190</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>273600.0</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273600</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>78</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>182.88</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>0.714286</td>\n",
+       "      <td>47</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>167.64</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>0.368421</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.157895</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.975900</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.571429</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.768533</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.534522</td>\n",
-       "      <td>2</td>\n",
+       "      <td>273600.0</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273600</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>56</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>178.00</td>\n",
-       "      <td>119.3</td>\n",
+       "      <td>43</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>172.72</td>\n",
+       "      <td>66.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.534522</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.228321</td>\n",
+       "      <td>1</td>\n",
+       "      <td>273600.0</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273600</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>180.34</td>\n",
-       "      <td>78.4</td>\n",
+       "      <td>155.00</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.707107</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.800000</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.447214</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.653376</td>\n",
+       "      <td>3</td>\n",
+       "      <td>273600.0</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>273600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273600</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 326 columns</p>\n",
+       "<p>5 rows × 331 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   gender  age  elixhauser  re_admission  Height_cm  Weight_kg  mechvent_mean  \\\n",
-       "0       1   61           1             0     173.00      115.0       0.000000   \n",
-       "1       1   92           4             1     163.00       68.5       0.000000   \n",
-       "2       1   78           9             0     182.88       90.0       0.714286   \n",
-       "3       1   56           4             0     178.00      119.3       0.000000   \n",
-       "4       0   61           8             0     180.34       78.4       0.000000   \n",
+       "0       1   82           3             0     175.00       80.0       0.631579   \n",
+       "1       1   30           7             0     172.72       56.8       0.000000   \n",
+       "2       1   47           1             0     167.64       62.8       0.368421   \n",
+       "3       1   43           9             1     172.72       66.6       1.000000   \n",
+       "4       1   53           8             0     155.00       47.5       1.000000   \n",
        "\n",
-       "   mechvent_max  extubated_mean  extubated_max  ...  SOFA_min  SOFA_max  \\\n",
-       "0             0             0.0              0  ...        13        13   \n",
-       "1             0             0.0              0  ...         2         8   \n",
-       "2             1             0.0              0  ...         5         8   \n",
-       "3             0             0.0              0  ...         8         9   \n",
-       "4             0             0.0              0  ...         9        11   \n",
+       "   mechvent_max  extubated_mean  extubated_max  ...  SIRS_min  SIRS_max  \\\n",
+       "0             1        0.052632              1  ...         1         3   \n",
+       "1             0        0.000000              0  ...         2         4   \n",
+       "2             1        0.157895              1  ...         1         4   \n",
+       "3             1        0.000000              0  ...         0         4   \n",
+       "4             1        0.000000              0  ...         1         4   \n",
        "\n",
-       "   SOFA_std  SOFA_last  SIRS_mean  SIRS_min  SIRS_max  SIRS_std  SIRS_last  \\\n",
-       "0       NaN         13   1.000000         1         1       NaN          1   \n",
-       "1  2.225395          5   2.285714         1         4  0.951190          2   \n",
-       "2  0.975900          7   2.571429         2         3  0.534522          2   \n",
-       "3  0.534522          9   2.000000         0         3  1.000000          0   \n",
-       "4  0.707107         10   1.800000         1         2  0.447214          2   \n",
+       "   SIRS_std  SIRS_last  time_to_discharge_mean  time_to_discharge_min  \\\n",
+       "0  0.696692          1                273600.0                 273600   \n",
+       "1  0.333333          3                273600.0                 273600   \n",
+       "2  0.768533          2                273600.0                 273600   \n",
+       "3  1.228321          1                273600.0                 273600   \n",
+       "4  0.653376          3                273600.0                 273600   \n",
+       "\n",
+       "   time_to_discharge_max  time_to_discharge_std  time_to_discharge_last  \\\n",
+       "0                 273600                    0.0                  273600   \n",
+       "1                 273600                    0.0                  273600   \n",
+       "2                 273600                    0.0                  273600   \n",
+       "3                 273600                    0.0                  273600   \n",
+       "4                 273600                    0.0                  273600   \n",
        "\n",
        "   died_in_hosp  \n",
        "0             0  \n",
@@ -1061,10 +1081,10 @@
        "3             0  \n",
        "4             1  \n",
        "\n",
-       "[5 rows x 326 columns]"
+       "[5 rows x 331 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,11 +1095,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_agg.to_csv('../../data/mimic_dataset_24h_aggregated.csv', index=False)"
+    "df_agg.to_csv(f'../../data/mimic_dataset_{TIME_WINDOW_IN_HOUR}h_aggregated.csv', index=False)"
    ]
   }
  ],
